[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolang-smolagents"
dynamic = ["version"]
description = "InfoLang semantic-memory Tools for the SmolAgents (Hugging Face) framework."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "InfoLang", email = "engineering@infolang.ai" }]
keywords = ["infolang", "smolagents", "huggingface", "memory", "semantic-memory", "agents", "rag", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "infolang>=0.2,<0.3",
  "smolagents>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://infolang.ai"
Documentation = "https://docs.infolang.ai"
Source = "https://github.com/InfoLang-Inc/infolang-smolagents"
Issues = "https://github.com/InfoLang-Inc/infolang-smolagents/issues"

[tool.hatch.version]
path = "src/infolang_smolagents/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infolang_smolagents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=infolang_smolagents --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/infolang_smolagents"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_subclassing_any = false
files = ["src/infolang_smolagents"]

[[tool.mypy.overrides]]
module = "smolagents.*"
ignore_missing_imports = true
